--- a/docs/12_gallery/css/theater.css
+++ b/docs/12_gallery/css/theater.css
@@ -28,22 +28,31 @@
 
 
 /*===================== layout and positioning ========================*/
+.cp_smalltile_fbg::before {
+    z-index: 3;
+}
+.cp_smalltile_fbg > div {
+    z-index: 2;
+}
+
+.cp_smalltile_fbg > figure {
+    background-color: var(--nv-0);
+}
 
 .cp_smalltile_fbg > figure img {
-    transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;
+    position: relative;
+    z-index: 1;
+    transition: transform 0.2s ease-in-out, opacity 0.6s ease-in-out;
 }
 
 .cp_smalltile_fbg video {
-/*    display: none;*/
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
     object-fit: cover;
     object-position: center;
-    transition: display 3s 3s ease-out;
 }
 
 .cp_smalltile_fbg:hover > figure img {
@@ -52,9 +61,23 @@
 
 section:has(#open:checked) .cp_smalltile_fbg > figure img {
     opacity: 0;
-    transition: transform 0.2s ease-in-out, opacity 0.3s 0.3s ease-in-out;
+    transition: transform 0.2s ease-in-out, opacity 0.6s 0.3s ease-in-out;
 }
 
 section:has(#open:checked) .cp_smalltile_fbg video {
     display: block;
+}
+
+@media screen and (max-width: 1023px) {
+    .cp_smalltile_fbg video {
+/*
+        object-fit: contain;
+        object-position: bottom;
+*/
+        height: auto;
+        top: unset;
+        bottom: 0;
+        -webkit-mask-image: linear-gradient(to bottom, transparent, black 50%);
+/*        mask-type: alpha;*/
+    }
 }
