--- a/docs/15_pdp/css/sections.css
+++ b/docs/15_pdp/css/sections.css
@@ -239,9 +239,13 @@ content: " On";
 }
 .cp_f_ctr_btn {
     padding: 0;
+    transition: opacity 0.3s ease-in-out;
 }
 
 @media screen and (max-width: 639px) { 
+    .tour_list {
+        margin-top: var(--sp_px-xxl);
+    }
     .tour_list > li:last-child .cp_ol-decimal {
         margin-bottom: 0;
     }
@@ -286,6 +290,12 @@ content: " On";
     animation-play-state: running;
     animation-timing-function: ease-in-out;
 }
+
+.wrapper:has(#autoplay:checked) .sc_tour + div .cp_f_ctr_btn {
+    opacity: 0;
+    visibility: hidden;
+}
+
 
 @media screen and (max-width: 639px) { 
     
@@ -338,18 +348,20 @@ content: " On";
     .wrapper:has(#autoplay:checked) .tour_list > li {
         flex: 0 0 auto;
     }
-    .wrapper:has(#autoplay:checked) .tour_list h4 {
+    .wrapper:has(#autoplay:checked) .tour_list > li h4 {
         display: none;
     }
-    .wrapper:has(#autoplay:checked) .tour_list ol {
+    .wrapper:has(#autoplay:checked) .tour_list > li ol {
         display: flex;
         padding: 0;
-        margin-bottom: 0;
+        margin: 0;
+        max-width: 600vw;
     }
-    .wrapper:has(#autoplay:checked) .tour_list ol li {
+    .wrapper:has(#autoplay:checked) .tour_list > li ol li {
         flex: 0 0 100vw;
         list-style-type: none;
         padding: 0 var(--padding-lr);
+        margin: 0;
     }
     
 /*    position */
@@ -597,7 +609,52 @@ content: " On";
 
 }
 
+/*======================= product tour hover =======================*/
+.sc_tour.hover ol li {
+    cursor: pointer;
+    z-index: 0;
+    transition: width 0.2s ease-in-out 0.2s,
+        max-height 0.2s ease-in-out 0.2s,
+        border-radius 0.2s ease-in-out 0.2s,
+        background-color 0.2s ease-in-out 0.2s,
+        box-shadow 0.2s ease-in-out 0.2s,
+        z-index 0s ease-in-out 0.4s;
+}
+.sc_tour.hover ol li::before {
+    max-height: var(--tour-annotation-height);
+        transition: opacity 0.2s ease-in-out 0.4s,
+            max-height 0.2s ease-in-out 0.2s;
+    
+}
+.sc_tour.hover ol li span {
+    display: block;
+transition: opacity 0.2s ease-in-out;
+}
 
+
+.sc_tour.hover ol li:is(:hover, :focus) {
+    width: var(--tour-annotation-text-width);
+    max-height: 150px;
+    border-radius: 0px;
+    background-color: var(--nv-15-ee);
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+    z-index: 1;
+    transition: width 0.2s ease-in-out,
+        max-height 0.2s ease-in-out,
+        border-radius 0.2s ease-in-out,
+        background-color 0.2s ease-in-out,
+        box-shadow 0.2s ease-in-out;
+}
+.sc_tour.hover ol li:is(:hover, :focus)::before {
+    opacity: 0;
+    max-height: 0;
+    transition: opacity 0.2s ease-in-out,
+        max-height 0.2s ease-in-out;
+}
+.sc_tour.hover ol li:is(:hover, :focus) span {
+    opacity: 1;
+    transition: opacity 0.2s ease-in-out 0.2s;
+}
 
 
 /*================ news and events =================*/
